--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.1
   hive_flutter: ^1.1.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   build_runner: ^2.2.1
